--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.json" />
 
     <title>John Doe - Resume (DevOps Engineer)</title>
-    <meta name="keywords" content="Resume, DevOps Engineer, John Doe, IT Professional" />
+    <meta name="keywords" content="Resume, DevOps Engineer, kO KO Shine, IT Professional" />
     <meta name="description"
         content="Hello, I'm John Doe. This is my latest resume, showcasing my experience and skills as a DevOps Engineer. Feel free to contact me. Thank you for visiting :).">
 
@@ -31,10 +31,10 @@
                     <div class="rightcontent-wrapper">
                         <div class="experience-bubble"><img src="img/experience-bubble.png" /></div>
                         <h1 class="hello">Hello, <small>I am</small></h1>
-                        <h1 class="name">JOHN DOE</h1>
+                        <h1 class="name">Ko Ko Shine</h1>
                         <h4>DevOps Engineer and Automation Specialist</h4>
                         <div class="contact-wrapper">
-                            <div class="content"><a href="https://www.johndoe.dev" target="_blank"> <i
+                            <div class="content"><a href="https://www.kokoshine.dev" target="_blank"> <i
                                         class="fa fa-laptop"></i><strong> https://www.johndoe.dev</strong></a></div>
                             <div class="content"><a href="mailto:john@doe.dev"> <i class="fa fa-envelope"></i>
                                     john@doe.dev</a></div>
