--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         <h4>DevOps Engineer and Automation Specialist</h4>
                         <div class="contact-wrapper">
                             <div class="content"><a href="https://www.koko.dev" target="_blank"> <i
-                                        class="fa fa-laptop"></i><strong> https://www.johndoe.dev</strong></a></div>
-                            <div class="content"><a href="mailto:john@doe.dev"> <i class="fa fa-envelope"></i>
-                                    john@doe.dev</a></div>
+                                        class="fa fa-laptop"></i><strong> https://www.kokoshine.dev</strong></a></div>
+                            <div class="content"><a href="mailto:kokoshine.dev"> <i class="fa fa-envelope"></i>
+                                    kokoshine.dev</a></div>
                             <div class="content"><i class="fa fa-mobile"></i>(+1) 123-456-7890</div>
                             <div class="clearfix"></div>
                         </div>
