--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
 
-    <title>John Doe - Resume (DevOps Engineer)</title>
+    <title>Ko Ko Shine - Resume (DevOps Engineer)</title>
     <meta name="keywords" content="Resume, DevOps Engineer, Ko Ko Shine, IT Professional" />
     <meta name="description"
         content="Hello, I'm Ko Ko Shine. This is my latest resume, showcasing my experience and skills as a DevOps Engineer. Feel free to contact me. Thank you for visiting :).">
